--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,20 @@
   padding: 0;
 }
 :root {
-  --brand-color: #2e2f42;
-  --white: #fff;
-  --cornflower: #e7e9fc;
-  --iris: #4d5ae5;
-  --slate: #434455;
-  --cloud: #f4f4fd;
-  --ocean: #404bbf;
+  --brand-color: rgba(46, 47, 66, 1);
+  --white: rgba(255, 255, 255, 1);
+  --cornflower: rgba(231, 233, 252, 1);
+  --iris: rgba(77, 90, 229, 1);
+  --slate: rgba(67, 68, 85, 1);
+  --cloud: rgba(244, 244, 253, 1);
+  --ocean: rgba(65, 75, 191, 1);
   --light-slate: rgba(142, 143, 153, 1);
-  --green: #31d0aa;
+  --green: rgba(49, 208, 170, 1);
   --dairy: #fcfcfc;
+  --navyblue-modal: rgba(46, 47, 66, 0.4);
+  --tr-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --tr-duration: 250ms;
+  --transition: var(--tr-function) var(--tr-duration);
 }
 
 body {
@@ -57,10 +61,10 @@ h4 {
   justify-content: flex-start;
   align-items: center;
   margin-right: 76px;
-} /**/
+}
 .logo-web-lightbg {
   color: var(--iris);
-} /**/
+}
 .header-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -68,24 +72,6 @@ h4 {
   height: 72px;
   background: var(--white);
 }
-.links {
-  text-decoration: inherit;
-  font-family: "Roboto";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  color: inherit;
-}
-.link-html,
-.link-portfolio {
-  color: var(--iris);
-} /**/
-.links:hover,
-.links:focus {
-  color: var(--iris);
-} /**/
 
 .nav-links {
   display: flex;
@@ -93,7 +79,38 @@ h4 {
   justify-content: flex-start;
   align-items: center;
   gap: 40px;
-} /**/
+}
+.links {
+  position: relative;
+  text-decoration: none;
+  text-decoration: inherit;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  color: inherit;
+}
+.link-html,
+.link-portfolio {
+  color: var(--ocean);
+}
+.links:hover,
+.links:focus {
+  color: var(--ocean);
+  transition: var(--transition);
+}
+.link-current::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--ocean);
+  border-radius: 2px;
+}
 
 .contact-list {
   color: var(--slate);
@@ -102,7 +119,7 @@ h4 {
   margin-left: auto;
   align-items: center;
   gap: 40px;
-} /**/
+}
 
 .main-title-bg {
   background: var(--brand-color);
@@ -116,12 +133,7 @@ h4 {
   margin: 0 auto;
   padding: 188px 0;
 }
-/*.title {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-content: center;
-}*/
+
 .title-1-studio {
   color: var(--white);
   font-family: "Roboto";
@@ -152,19 +164,20 @@ h4 {
   padding: 16px 32px;
   border: none;
   cursor: pointer;
-} /**/
+}
 .btn-order:hover,
 .btn-order:focus {
   border-radius: 4px;
   background-color: var(--ocean);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-} /**/
+  transition: var(--transition);
+}
 
 .features-list {
   background-color: var(--white);
   padding-top: 120px;
   gap: 24px;
-} /**/
+}
 .features-list,
 .feature-title p {
   display: flex;
@@ -179,7 +192,7 @@ h4 {
   border-radius: 4px;
   background-color: var(--cloud);
   margin-bottom: 8px;
-} /**/
+}
 
 .features-icon {
   width: 64px;
@@ -198,7 +211,7 @@ h4 {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-} /**/
+}
 .description {
   color: var(--slate);
   font-family: "Roboto";
@@ -208,7 +221,7 @@ h4 {
   line-height: 1.5;
   letter-spacing: 0.32px;
   margin-top: 8px;
-} /**/
+}
 .section-2,
 .section-3,
 .section-4 {
@@ -233,18 +246,18 @@ h4 {
   justify-content: space-between;
   margin: 0;
   row-gap: 24px;
-} /**/
+}
 
 .section-3 {
   background-color: var(--cloud);
-} /**/
+}
 .team {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   text-align: center;
   row-gap: 24px;
-} /**/
+}
 
 .team figure {
   border-radius: 0px 0px 4px 4px;
@@ -260,11 +273,11 @@ h4 {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-} /**/
+}
 .team figcaption {
   padding-top: 32px;
   padding-bottom: 32px;
-} /**/
+}
 .team-person {
   padding-bottom: 8px;
   font-size: 20px;
@@ -304,11 +317,6 @@ h4 {
   line-height: 1.5;
   letter-spacing: 0.32px;
   padding-bottom: 16px;
-}
-.sm-footer-list svg {
-  gap: 16px;
-  width: 24px;
-  height: 24px;
 }
 .sm-footer-list {
   display: flex;
@@ -373,14 +381,15 @@ h4 {
   cursor: pointer;
   text-align: center;
   padding: 12px 24px;
-} /**/
+}
 .btn:hover,
 .btn:focus {
   color: var(--white);
   background-color: var(--ocean);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
-} /**/
+}
+
 .filter-buttons {
   display: flex;
   flex-wrap: wrap;
@@ -400,23 +409,48 @@ h4 {
   row-gap: 48px;
   margin-bottom: 120px;
   cursor: pointer;
-} /**/
+}
+.card-description {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
 .cards li:hover,
 .cards li:focus {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-} /**/
+}
 .cards figure {
   margin: 0;
-} /**/
+}
 .cards figcaption {
   padding: 32px 16px;
   border-bottom: 1px solid var(--cornflower);
   border-left: 1px solid var(--cornflower);
   border-right: 1px solid var(--cornflower);
-} /**/
-
+}
+.card-wrapper {
+  position: relative;
+  width: 360px;
+  height: 300px;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  top: 0;
+  left: 0;
+  background-color: var(--iris);
+  color: var(--cloud);
+  padding: 40px 32px 0px 32px;
+  transform: translateY(100%);
+  transition: var(--transition);
+}
+.cards li:hover .overlay {
+  transform: translateY(0);
+}
 .project {
   color: var(--brand-color);
   font-family: "Roboto";
@@ -426,7 +460,7 @@ h4 {
   line-height: 1.2;
   letter-spacing: 0.4px;
   margin-bottom: 8px;
-} /**/
+}
 .project-section {
   color: var(--slate);
   font-family: "Roboto";
@@ -435,7 +469,7 @@ h4 {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
-} /**/
+}
 /*styl of circle svg*/
 .circle {
   display: flex;
@@ -452,12 +486,62 @@ h4 {
 }
 .circle svg {
   fill: var(--cloud);
-  width: 24px;
-  height: 24px;
 }
-
 .sm-footer-wrapper {
   margin-top: 100px;
   margin-left: 120px;
   margin-bottom: 132px;
+}
+
+/*style of modal window*/
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--navyblue-modal);
+  pointer-events: all;
+  visibility: visible;
+  transition: opacity 250ms;
+}
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+}
+.modal-body {
+  position: relative;
+  max-width: 408px;
+  min-height: 584px;
+  margin: auto;
+  margin-top: 80px;
+  background-color: rgba(252, 252, 252, 1);
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+.modal-close-btn {
+  position: absolute;
+  inset: 24px 24px auto auto;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--cornflover);
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--brand-color);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--ocean);
+  fill: var(--white);
+  transition: var(--transition);
+}
+.close-icon {
+  height: 8px;
+  width: 8px;
 }
