--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h4 {
 .link-current::after {
   content: "";
   position: absolute;
-  bottom: -20px;
+  bottom: -27.5px;
   left: 0;
   width: 100%;
   height: 4px;
@@ -544,6 +544,7 @@ h4 {
   fill: var(--white);
   border: 1px solid var(--ocean);
   transition: var(--transition);
+  cursor: pointer;
 }
 .close-icon {
   height: 8px;
